[bdist_wheel]
universal = 1

[flake8]
max-line-length = 140
exclude = */migrations/*,*/south_migrations/*,.tox/*,build/*,venv/*,scratch*/*

[tool:pytest]
testpaths = tests
python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -rxEfsw
    --strict
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short

[isort]
force_single_line = True
line_length = 120
known_first_party = audit_alembic
default_section = THIRDPARTY
forced_separate = test_audit_alembic
not_skip = __init__.py
skip = migrations, south_migrations

[db]
default=sqlite:///:memory:
sqlite=sqlite:///:memory:
sqlite_file=sqlite:///querytest.db
postgresql=postgresql://scott:tiger@127.0.0.1:5432/test
mysql=mysql://scott:tiger@localhost/test?charset=utf8
mssql=mssql+pyodbc://scott:tiger@ms_2008
oracle=oracle://scott:tiger@127.0.0.1:1521

[sqla_testing]
requirement_cls=sqlalchemy.testing.requirements:SuiteRequirements
profile_file=tests/profiles.txt

[metadata]
description-file=README.rst
